--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -2932,3 +2932,28 @@ table.dataTable thead td {
     position: relative;
     padding-top: 60px;
 }
+
+#formCreate .btn-upload-thumbnail .upload-input {
+    /* position: absolute; */
+    /* left: 0; */
+    /* top: 0; */
+    /* height: 100%; */
+    /* width: 100%; */
+    /* opacity: 0; */
+    /* cursor: pointer; */
+}
+
+#formCreate .display-thumbnail {
+    display: flex;
+    height: 140px;
+    min-height: 140px;
+    min-width: 180px;
+    max-width: 180px;
+    justify-content: center;
+    align-items: center;
+    padding: 0px 20px;
+    margin: 10px;
+    border-radius: 5px;
+    position: relative;
+    background-image: linear-gradient(to top, #ededed, #efefef, #f1f1f1, #f4f4f4, #f6f6f6);
+}
