--- a/src/app/inside/transaction/transaction.component.html
+++ b/src/app/inside/transaction/transaction.component.html
@@ -36,79 +36,45 @@
                                 <thead class="text-uppercase">
                                     <tr>
                                         <th scope="col">ID</th>
-                                        <th scope="col">task</th>
-                                        <th scope="col">Deadline</th>
-                                        <th scope="col">Progress</th>
-                                        <th scope="col">status</th>
-                                        <th scope="col">action</th>
+                                        <th scope="col">Created At</th>
+                                        <th scope="col">Updated At</th>
+                                        <th scope="col">Username</th>
+                                        <th scope="col">Total Price</th>
+                                        <th scope="col">Payment Type</th>
+                                        <th scope="col">Transporter Name</th>
+                                        <th scope="col">Status</th>
+                                        <th></th>
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr>
-                                        <th scope="row">1</th>
-                                        <td>Mark</td>
-                                        <td>09 / 07 / 2018</td>
-                                        <td>
-                                            <div class="progress" style="height: 8px;">
-                                                <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                                            </div>
+                                    <tr *ngFor="let item of transactionList, let i = index">
+                                        <th scope="row">{{i + 1}}</th>
+                                        <td>{{item.createdAt | date:'yyyy/MM/dd - HH:mm:ss' : 'VI'}}</td>
+                                        <td>{{item.updatedAt | date:'yyyy/MM/dd - HH:mm:ss' : 'VI'}}</td>
+                                        <td>{{item.accountName}}</td>
+                                        <td>${{item.totalPrice}}</td>
+                                        <td>{{item.paymentType}}</td>
+                                        <td>{{item.transportersName}}</td>
+                                        <td *ngIf="item.status ==='Pending'">
+                                            <span class="status-p bg-success">Pending</span>
                                         </td>
-                                        <td><span class="status-p bg-primary">pending</span></td>
                                         <td>
                                             <ul class="d-flex justify-content-center">
-                                                <li class="mr-3"><a href="#" class="text-secondary"><i class="fa fa-edit"></i></a></li>
-                                                <li><a href="#" class="text-danger"><i class="ti-trash"></i></a></li>
-                                            </ul>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <th scope="row">2</th>
-                                        <td>Mark</td>
-                                        <td>09 / 07 / 2018</td>
-                                        <td>
-                                            <div class="progress" style="height: 8px;">
-                                                <div class="progress-bar bg-warning" role="progressbar" style="width: 80%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                                            </div>
-                                        </td>
-                                        <td><span class="status-p bg-warning">pending</span></td>
-                                        <td>
-                                            <ul class="d-flex justify-content-center">
-                                                <li class="mr-3"><a href="#" class="text-secondary"><i class="fa fa-edit"></i></a></li>
-                                                <li><a href="#" class="text-danger"><i class="ti-trash"></i></a></li>
-                                            </ul>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <th scope="row">3</th>
-                                        <td>Mark</td>
-                                        <td>09 / 07 / 2018</td>
-                                        <td>
-                                            <div class="progress" style="height: 8px;">
-                                                <div class="progress-bar bg-success" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                                            </div>
-                                        </td>
-                                        <td><span class="status-p bg-success">complate</span></td>
-                                        <td>
-                                            <ul class="d-flex justify-content-center">
-                                                <li class="mr-3"><a href="#" class="text-secondary"><i class="fa fa-edit"></i></a></li>
-                                                <li><a href="#" class="text-danger"><i class="ti-trash"></i></a></li>
-                                            </ul>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <th scope="row">4</th>
-                                        <td>Mark</td>
-                                        <td>09 / 07 / 2018</td>
-                                        <td>
-                                            <div class="progress" style="height: 8px;">
-                                                <div class="progress-bar bg-warning" role="progressbar" style="width: 85%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                                            </div>
-                                        </td>
-                                        <td><span class="status-p bg-warning">panding</span></td>
-                                        <td>
-                                            <ul class="d-flex justify-content-center">
-                                                <li class="mr-3"><a href="#" class="text-secondary"><i class="fa fa-edit"></i></a></li>
-                                                <li><a href="#" class="text-danger"><i class="ti-trash"></i></a></li>
+                                                <li class="mr-3">
+                                                    <a class="text-secondary">
+                                                        <i class="fa fa-edit"></i>
+                                                    </a>
+                                                </li>
+                                                <li class="mr-3">
+                                                    <a class="text-secondary">
+                                                        <i class="fa fa-arrow-circle-right"></i>
+                                                    </a>
+                                                </li>
+                                                <li *ngIf="item.status!=='Deleted'">
+                                                    <a class="text-danger">
+                                                        <i class="ti-trash"></i>
+                                                    </a>
+                                                </li>
                                             </ul>
                                         </td>
                                     </tr>
