--- a/src/app/inside/product/create-edit/create-edit.component.html
+++ b/src/app/inside/product/create-edit/create-edit.component.html
@@ -96,7 +96,7 @@
                             <div class="form-group">
                                 <label>Thumbnail</label>
                                 <div class="btn-upload-thumbnail">
-                                    <input type="file" (change)="uploadThumbnail($event)" accept=".png,.jpg" class="upload-input">
+                                    <input type="file" (change)="uploadThumbnail($event)" accept=".png,.jpg, .jpeg" class="upload-input">
                                     <!-- <button class="btn btn-add">
                                         <i class="fa fa-upload"></i> &nbsp;
                                         Upload
@@ -113,15 +113,15 @@
                                 </div>
                                 <ng-container *ngIf="this.thumbnail !== null && this.thumbnail !== undefined && this.thumbnail !== ''">
                                     <div class="display-thumbnail">
-                                        <img width="100%" src="{{this.thumbnail}}" alt="">
+                                        <img width="80%" src="{{this.thumbnail}}" alt="">
                                     </div>
                                 </ng-container>
                             </div>
                             <div class="form-group">
-                                <label>List Image</label>
+                                <label>Image List</label>
                                 <div class="row align-items-center">
                                     <div class="input col-md-12">
-                                        <ngx-dropzone (change)="onSelect($event)" accept=".png, .jpg ,.mp4">
+                                        <ngx-dropzone (change)="onSelect($event)" accept=".png, .jpg , .jpeg">
                                             <ngx-dropzone-label class="btn btn-add"><i class="fa fa-upload"></i> &nbsp; Upload
                                             </ngx-dropzone-label>
                                         </ngx-dropzone>
@@ -139,7 +139,7 @@
                                 <div class="col-md-12 row">
                                     <ngx-dropzone-preview *ngFor="let url of urls" [removable]="true" (removed)="onRemove(url)">
                                         <ngx-dropzone-label>
-                                            <img width="100%" src="{{url}}" alt="">
+                                            <img width="90%" src="{{url}}" alt="">
                                         </ngx-dropzone-label>
                                     </ngx-dropzone-preview>
                                 </div>
@@ -166,9 +166,14 @@
                                 </div>
                             </div>
                             <div class="text-right">
-                                <button type="submit" (click)="createProduct()" [disabled]="formCreate.invalid" class="btn btn-create-add">
+                                <button *ngIf="sttAdd" type="submit" (click)="createProduct()" [disabled]="formCreate.invalid" class="btn btn-create-add">
                                     <h4 class="button-name">
                                         Create
+                                    </h4>
+                                </button>
+                                <button *ngIf="!sttAdd" type="submit" (click)="updateProduct()" [disabled]="formCreate.invalid" class="btn btn-create-add">
+                                    <h4 class="button-name">
+                                        Update
                                     </h4>
                                 </button>
                             </div>
