--- a/src/app/inside/transaction/transaction.component.html
+++ b/src/app/inside/transaction/transaction.component.html
@@ -57,7 +57,9 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr *ngFor="let item of transactionList, let i = index ">
+                                    <tr *ngFor="let item of transactionList, let i = 
+                                    
+                                    index ">
                                         <th scope="row ">{{i + 1}}</th>
                                         <td>{{item.createdAt | date:'yyyy/MM/dd - HH:mm:ss' : 'VI'}}</td>
                                         <td>{{item.updatedAt | date:'yyyy/MM/dd - HH:mm:ss' : 'VI'}}</td>
