--- a/src/app/inside/user/user.component.html
+++ b/src/app/inside/user/user.component.html
@@ -77,7 +77,7 @@
         <div class="col-12 mt-5">
             <div class="card">
                 <div class="card-body">
-                    <h4 class="header-title">Seller Table</h4>
+                    <h4 class="header-title">Admin Table</h4>
                     <div class="single-table">
                         <div class="table-responsive">
                             <table class="table table-hover progress-table text-center">
@@ -92,7 +92,7 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr *ngFor="let item of sellerList, let i = index">
+                                    <tr *ngFor="let item of adminList, let i = index">
                                         <th scope="row">{{i + 1}}</th>
                                         <td>{{item.createdAt | date:'yyyy/MM/dd - HH:mm:ss':'VI'}}</td>
                                         <td>{{item.email}}</td>
