--- a/src/app/inside/product/product.component.html
+++ b/src/app/inside/product/product.component.html
@@ -72,11 +72,13 @@
                                     <thead class="text-uppercase">
                                         <tr>
                                             <th scope="col">No</th>
-                                            <th scope="col">Created At <i (click)="sortBy($event, 'timeCre')" class="fa fa-arrow-down"></i></th>
-                                            <th scope="col">Updated At <i (click)="sortBy($event, 'timeUp')" class="fa fa-arrow-down"></i></th>
+                                            <th scope="col">Created At <i (click)="sortBy($event, 'timeCre')" class="ti-arrow-down"></i></th>
+                                            <th scope="col">Updated At <i (click)="sortBy($event, 'timeUp')" class="ti-arrow-down"></i></th>
                                             <th scope="col">Name</th>
                                             <th scope="col">Category</th>
                                             <th scope="col">Description</th>
+                                            <th scope="col">Price</th>
+                                            <th scope="col">Amount</th>
                                             <th scope="col"></th>
                                             <th scope="col">Status</th>
                                             <th scope="col">Action</th>
@@ -91,6 +93,8 @@
                                             <td>{{item.productName}}</td>
                                             <td>{{item.category.categoryName}}</td>
                                             <td>{{item.description}}</td>
+                                            <td>${{item.productPrice}}</td>
+                                            <td>{{item.totalProduct}}</td>
                                             <td><img width="50%" src="{{item.imageProduct}}" alt=""></td>
                                             <td *ngIf="item.status==='Active'"><span class=" status-p bg-success">Active</span></td>
                                             <td *ngIf="item.status==='Deactive'"><span class="status-p bg-secondary">DeActive</span></td>
@@ -99,12 +103,12 @@
                                                 <ul class="d-flex justify-content-center">
                                                     <li class="mr-3">
                                                         <a [routerLink]="['/product/create-edit']" [queryParams]="{id: item.productId}" class="text-secondary">
-                                                            <i class=" fa fa-edit "></i>
+                                                            <i class="ti-pencil-alt"></i>
                                                         </a>
                                                     </li>
                                                     <li *ngIf="item.status!=='Deactive'">
                                                         <a (click)="deleteProduct(item.productId)" class="text-danger">
-                                                            <i class=" ti-trash "></i>
+                                                            <i class="ti-trash"></i>
                                                         </a>
                                                     </li>
                                                 </ul>
