--- a/src/app/outside/login/login.component.html
+++ b/src/app/outside/login/login.component.html
@@ -26,7 +26,7 @@
                         <i class="ti-email"></i>
                         <div *ngIf="loginForm.get('email').invalid && (loginForm.get('email').dirty || loginForm.get('email').touched)" class="text-danger">
                             <div *ngIf="loginForm.get('email').errors.required">
-                                Đây là trường bắt buộc phải nhập.
+                                This is a required field.
                             </div>
                         </div>
                     </div>
@@ -36,7 +36,7 @@
                         <i class="ti-lock"></i>
                         <div *ngIf="loginForm.get('password').invalid && (loginForm.get('password').dirty || loginForm.get('password').touched)" class="text-danger">
                             <div *ngIf="loginForm.get('password').errors.required">
-                                Đây là trường bắt buộc phải nhập.
+                                This is a required field.
                             </div>
                         </div>
                     </div>
