--- a/src/app/inside/hot-product/hot-product.component.html
+++ b/src/app/inside/hot-product/hot-product.component.html
@@ -14,8 +14,8 @@
                 <div class="breadcrumbs-area clearfix">
                     <h4 class="page-title pull-left">Dashboard</h4>
                     <ul class="breadcrumbs pull-left">
-                        <li><a href="index.html">Home</a></li>
-                        <li><span>Product</span></li>
+                        <li><a href="/dashboard">Home</a></li>
+                        <li><span>Hot Product</span></li>
                     </ul>
                 </div>
             </div>
@@ -63,6 +63,7 @@
                                         <tr>
                                             <th scope="col">No</th>
                                             <th scope="col">Product Name</th>
+                                            <th scope="col">Category Name</th>
                                             <th scope="col">Seller</th>
                                             <th scope="col">Price</th>
                                             <th scope="col"></th>
@@ -71,26 +72,31 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        <tr *ngFor="let item of hotProductList| paginate: { itemsPerPage: 20, currentPage: p, id: id  }
+                                        <tr *ngFor="let item of hotProductList
                                             , let i = index">
                                             <th scope="row">{{i + 1}}</th>
                                             <td>{{item.product.productName}}</td>
-                                            <td>{{item.category.categoryName}}</td>
-                                            <td>{{item.description}}</td>
-                                            <td><img width="50%" src="{{item.imageProduct}}" alt=""></td>
+                                            <td>{{item.product.category.categoryName}}</td>
+                                            <td>{{getSellerName(item.product.accountId)}}</td>
+                                            <td>${{item.product.productPrice}}</td>
+                                            <td><img width="40%" src="{{item.product.imageProduct}}" alt=""></td>
                                             <td *ngIf="item.status==='Active'"><span class=" status-p bg-success">Active</span></td>
-                                            <td *ngIf="item.status==='Deactive'"><span class="status-p bg-secondary">DeActive</span></td>
-                                            <td *ngIf="item.status==='Deleted'"><span class="status-p bg-danger">Deleted</span></td>
+                                            <td *ngIf="item.status==='Deactive'"><span class="status-p bg-danger">Deactive</span></td>
                                             <td>
                                                 <ul class="d-flex justify-content-center">
                                                     <li class="mr-3">
-                                                        <a [routerLink]="['/product/create-edit']" [queryParams]="{id: item.productId}" class="text-secondary">
-                                                            <i class=" fa fa-edit "></i>
+                                                        <a class="text-secondary">
+                                                            <i class="ti-layers-alt"></i>
                                                         </a>
                                                     </li>
-                                                    <li *ngIf="item.status!=='Deactive'">
-                                                        <a (click)="deleteProduct(item.productId)" class="text-danger">
-                                                            <i class=" ti-trash "></i>
+                                                    <li *ngIf="item.status=='Active'">
+                                                        <a class="text-danger">
+                                                            <i class="ti-trash"></i>
+                                                        </a>
+                                                    </li>
+                                                    <li *ngIf="item.status=='Deactive'">
+                                                        <a class="text-success">
+                                                            <i (click)="activeHotProduct(item.hotProductId)" class="ti-check-box"></i>
                                                         </a>
                                                     </li>
                                                 </ul>
@@ -98,8 +104,6 @@
                                         </tr>
                                     </tbody>
                                 </table>
-                                <pagination-controls maxSize="5" *ngIf="productDataList.length > 25" style="text-align: right" [id]="id" (pageChange)="p = $event">
-                                </pagination-controls>
                             </div>
                         </div>
                     </div>
