--- a/src/app/inside/seller/my-transactions/my-transactions.component.html
+++ b/src/app/inside/seller/my-transactions/my-transactions.component.html
@@ -12,10 +12,9 @@
     <div class="row align-items-center">
         <div class="col-sm-6">
             <div class="breadcrumbs-area clearfix">
-                <h4 class="page-title pull-left">Dashboard</h4>
                 <ul class="breadcrumbs pull-left">
-                    <li><a href="index.html">Home</a></li>
-                    <li><span>Transaction</span></li>
+                    <li><a href="/dashboard">Home</a></li>
+                    <li><span>Transaction List</span></li>
                 </ul>
             </div>
         </div>
@@ -44,30 +43,30 @@
                             <table class="table table-hover progress-table text-center ">
                                 <thead class="text-uppercase ">
                                     <tr>
-                                        <th scope="col ">No</th>
-                                        <th scope="col ">Created At</th>
-                                        <th scope="col ">Updated At</th>
-                                        <th scope="col ">Username</th>
-                                        <th scope="col ">Total Price</th>
-                                        <th scope="col ">Payment Type</th>
-                                        <th scope="col ">Transporter Name</th>
-                                        <th scope="col " *ngIf="sttAdmin ">Seller</th>
-                                        <th scope="col ">Status</th>
+                                        <th scope="col">No</th>
+                                        <th scope="col">ID</th>
+                                        <th scope="col">Created At <i (click)="sortBy($event, 'timeCre')" class="ti-arrow-down"></i></th>
+                                        <th scope="col">Updated At <i (click)="sortBy($event, 'timeUp')" class="ti-arrow-down"></i></th>
+                                        <th scope="col">Username</th>
+                                        <th scope="col">Total Price <i (click)="sortBy($event, 'totalPrice')" class="ti-arrow-down"></i></th>
+                                        <th scope="col">Payment Type</th>
+                                        <th scope="col">Transporter Name</th>
+                                        <th scope="col">Status</th>
                                         <th></th>
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr *ngFor="let item of transactionList, let i = 
+                                    <tr *ngFor="let item of transactionList | paginate: { itemsPerPage: 20, currentPage: p, id: id}, let i = 
                                     
                                     index ">
                                         <th scope="row ">{{i + 1}}</th>
+                                        <th scope="row ">{{item.id}}</th>
                                         <td>{{item.createdAt | date:'yyyy/MM/dd - HH:mm:ss' : 'VI'}}</td>
                                         <td>{{item.updatedAt | date:'yyyy/MM/dd - HH:mm:ss' : 'VI'}}</td>
                                         <td>{{item.accountName}}</td>
                                         <td>${{item.totalPrice}}</td>
                                         <td>{{item.paymentType}}</td>
                                         <td>{{item.transportersName}}</td>
-                                        <td *ngIf="sttAdmin ">{{getSellerName(item.sellerId)}}</td>
                                         <td *ngIf="item.status==='Pending' ">
                                             <span class="status-p bg-secondary ">Pending</span>
                                         </td>
@@ -87,20 +86,20 @@
                                             <span class="status-p bg-danger ">Cancel</span>
                                         </td>
                                         <td>
-                                            <ul class="d-flex justify-content-center ">
+                                            <ul class="d-flex justify-content-center">
                                                 <li class="mr-3 ">
-                                                    <a class="text-secondary ">
-                                                        <i class="fa fa-edit "></i>
+                                                    <a class="text-secondary">
+                                                        <i class="ti-eye"></i>
                                                     </a>
                                                 </li>
-                                                <li *ngIf="item.status !=='Done' && item.status !=='Cancel' " title="Change Status " class="mr-3 " (click)="changeStatus(item.status, item.id) ">
+                                                <li *ngIf="item.status !=='Done' && item.status !=='Cancel'" title="Change Status " class="mr-3 " (click)="changeStatus(item.status, item.id) ">
                                                     <a class="text-secondary ">
-                                                        <i class="fa fa-arrow-circle-right "></i>
+                                                        <i class="ti-arrow-right"></i>
                                                     </a>
                                                 </li>
-                                                <li (click)="deleteTrans(item.id) " *ngIf="item.status !=='Cancel' && item.status !=='Done' ">
-                                                    <a class="text-danger ">
-                                                        <i class="ti-trash "></i>
+                                                <li (click)="deleteTrans(item.id)" *ngIf="item.status !=='Cancel' && item.status !=='Done' ">
+                                                    <a class="text-danger">
+                                                        <i class="ti-trash"></i>
                                                     </a>
                                                 </li>
                                             </ul>
@@ -108,6 +107,8 @@
                                     </tr>
                                 </tbody>
                             </table>
+                            <pagination-controls maxSize="5" *ngIf="transactionList.length > 1" style="text-align: right" [id]="id" (pageChange)="p = $event">
+                            </pagination-controls>
                         </div>
                     </div>
                 </div>
