--- a/src/app/inside/manage/category/category.component.html
+++ b/src/app/inside/manage/category/category.component.html
@@ -13,9 +13,8 @@
         <div class="row align-items-center">
             <div class="col-sm-6">
                 <div class="breadcrumbs-area clearfix">
-                    <h4 class="page-title pull-left">Dashboard</h4>
                     <ul class="breadcrumbs pull-left">
-                        <li><a href="index.html">Home</a></li>
+                        <li><a href="/dashboard">Home</a></li>
                         <li><span>Category</span></li>
                     </ul>
                 </div>
@@ -74,7 +73,7 @@
                                                 <ul class="d-flex justify-content-center">
                                                     <li class="mr-3">
                                                         <a [routerLink]="['/category/create-edit']" [queryParams]="{id: item.categoryId}" class="text-secondary">
-                                                            <i class="fa fa-edit"></i>
+                                                            <i class="ti-pencil-alt"></i>
                                                         </a>
                                                     </li>
                                                     <li *ngIf="item.status !== 'Deactive'"><a (click)="deleteCategory(item.categoryId)" class="text-danger"><i class="ti-trash"></i></a>
