--- a/src/app/inside/manage/hot-product/hot-product.component.html
+++ b/src/app/inside/manage/hot-product/hot-product.component.html
@@ -12,7 +12,6 @@
         <div class="row align-items-center">
             <div class="col-sm-6">
                 <div class="breadcrumbs-area clearfix">
-                    <h4 class="page-title pull-left">Dashboard</h4>
                     <ul class="breadcrumbs pull-left">
                         <li><a href="/dashboard">Home</a></li>
                         <li><span>Hot Product</span></li>
@@ -86,7 +85,7 @@
                                                 <ul class="d-flex justify-content-center">
                                                     <li class="mr-3">
                                                         <a class="text-secondary">
-                                                            <i class="ti-layers-alt"></i>
+                                                            <i class="ti-eye"></i>
                                                         </a>
                                                     </li>
                                                     <li *ngIf="item.status=='Active'">
