--- a/src/app/inside/manage/product/create-edit/create-edit.component.html
+++ b/src/app/inside/manage/product/create-edit/create-edit.component.html
@@ -13,11 +13,11 @@
         <div class="row align-items-center">
             <div class="col-sm-6">
                 <div class="breadcrumbs-area clearfix">
-                    <h4 class="page-title pull-left">Dashboard</h4>
                     <ul class="breadcrumbs pull-left">
                         <li><a href="/dashboard">Home</a></li>
-                        <li><a href="/products">Product</a></li>
-                        <li><span>Create</span></li>
+                        <li><a href="/product-list">Product</a></li>
+                        <li *ngIf="sttAdd"><span>Create</span></li>
+                        <li *ngIf="!sttAdd"><span>Update</span></li>
                     </ul>
                 </div>
             </div>
