--- a/src/app/inside/manage/hot-product/hot-product.component.html
+++ b/src/app/inside/manage/hot-product/hot-product.component.html
@@ -61,8 +61,8 @@
                                     <thead class="text-uppercase">
                                         <tr>
                                             <th scope="col">No</th>
-                                            <th scope="col">Product Name</th>
-                                            <th scope="col">Category Name</th>
+                                            <th scope="col">Product</th>
+                                            <th scope="col">Category</th>
                                             <th scope="col">Seller</th>
                                             <th scope="col">Price</th>
                                             <th scope="col"></th>
@@ -90,7 +90,7 @@
                                                     </li>
                                                     <li *ngIf="item.status=='Active'">
                                                         <a class="text-danger">
-                                                            <i class="ti-trash"></i>
+                                                            <i (click)="deactiveHotProduct(item.hotProductId)" class="ti-trash"></i>
                                                         </a>
                                                     </li>
                                                     <li *ngIf="item.status=='Deactive'">
