--- a/src/app/inside/manage/product/product.component.html
+++ b/src/app/inside/manage/product/product.component.html
@@ -15,7 +15,7 @@
                 <div class="breadcrumbs-area clearfix">
                     <h4 class="page-title pull-left">Dashboard</h4>
                     <ul class="breadcrumbs pull-left">
-                        <li><a href="index.html">Home</a></li>
+                        <li><a href="/dashboard">Home</a></li>
                         <li><span>Product</span></li>
                     </ul>
                 </div>
@@ -80,6 +80,7 @@
                                             <th scope="col">Description</th>
                                             <th scope="col">Price <i (click)="sortBy($event, 'price')" class="ti-arrow-down"></i></th>
                                             <th scope="col">Amount <i (click)="sortBy($event, 'amount')" class="ti-arrow-down"></i></th>
+                                            <th scope="col">Seller</th>
                                             <th scope="col"></th>
                                             <th scope="col">Status</th>
                                             <th scope="col">Action</th>
@@ -97,6 +98,7 @@
                                             <td>{{item.description}}</td>
                                             <td>${{item.productPrice}}</td>
                                             <td>{{item.totalProduct}}</td>
+                                            <td>{{getSellerName(item.accountId)}}</td>
                                             <td><img width="50%" src="{{item.imageProduct}}" alt=""></td>
                                             <td *ngIf="item.status==='Active'"><span class=" status-p bg-success">Active</span></td>
                                             <td *ngIf="item.status==='Deactive'"><span class="status-p bg-secondary">DeActive</span></td>
