--- a/src/app/inside/seller/my-products/my-products.component.html
+++ b/src/app/inside/seller/my-products/my-products.component.html
@@ -106,7 +106,7 @@
                                                             <i class="ti-pencil-alt"></i>
                                                         </a>
                                                     </li>
-                                                    <li *ngIf="item.status!=='Deactive'" class="mr-3">
+                                                    <li *ngIf="item.status!=='Deactive' && item.hotProductStatus !== true" class="mr-3">
                                                         <a (click)="hotProductRequest(item.productId)" class="text-success">
                                                             <i class="ti-hand-point-up"></i>
                                                         </a>
