--- a/src/app/inside/seller/my-transactions/my-transactions.component.html
+++ b/src/app/inside/seller/my-transactions/my-transactions.component.html
@@ -56,9 +56,7 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr *ngFor="let item of transactionList | paginate: { itemsPerPage: 20, currentPage: p, id: id}, let i = 
-                                    
-                                    index ">
+                                    <tr *ngFor="let item of transactionList | paginate: { itemsPerPage: 20, currentPage: p, id: id}, let i = index ">
                                         <th scope="row ">{{i + 1}}</th>
                                         <th scope="row ">{{item.id}}</th>
                                         <td>{{item.createdAt | date:'yyyy/MM/dd - HH:mm:ss' : 'VI'}}</td>
